// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoneyInput component renders correctly 1`] = `
<div
  class="relative flex"
>
  <span
    aria-hidden="true"
    class="absolute bg-gray-100 top-[1px] left-[1px] py-2 px-3 rounded-l border-gray-400 border-r border-solid leading-[31px] text-[18px]"
  >
    £
  </span>
  <input
    class="tool-field w-full ml-0 h-auto focus:outline-none focus:shadow-focus-outline border-gray-400 border py-[11px] pb-[12px] pl-12 rounded focus:border-blue-800"
    data-testid="number-input"
    id="test-id"
    inputmode="numeric"
    name="test-name"
    type="text"
    value=""
  />
</div>
`;

exports[`MoneyInput component renders correctly with addon 1`] = `
<div
  class="relative flex"
>
  <span
    aria-hidden="true"
    class="absolute bg-gray-100 top-[1px] left-[1px] py-2 px-3 rounded-l border-gray-400 border-r border-solid leading-[31px] text-[18px]"
  >
    £
  </span>
  <input
    class="tool-field w-full ml-0 h-auto focus:outline-none focus:shadow-focus-outline border-gray-400 border py-[11px] pb-[12px] pl-12 rounded focus:border-blue-800 pr-12"
    data-testid="number-input"
    id="test-id"
    inputmode="numeric"
    name="test-name"
    type="text"
    value=""
  />
  <span
    aria-hidden="true"
    class="absolute top-[1px] right-[1px] px-3 py-2 bg-gray-100 border-l border-gray-400 border-solid rounded-r text-nowrap h-[calc(100%-2px)] text-[18px]"
  >
    £
  </span>
</div>
`;
